# vaultix

./: .gitignore  Cargo.toml  compat.nix  flake-module.nix  flake.nix  justfile  output-derivation.nix
.github/workflows/: eval.yaml  lint.yaml  test.yaml
apps/: edit.nix  renc.nix
dev/: checks.nix  configuration.nix  flake.nix  pre-commit-hooks.nix  test.nix
dev/test_key/: pubkey
doc/: advanced.md  faq.md  flake-module.md  prerequisites.md  threat-model.md
module/: default.nix  secretType.nix
src/: check_age.rs  lib.rs  main.rs
src/cmd/: deploy.rs
src/parser/: identity.rs  permission.rs  template.rs
src/util/: makeup.rs  secbuf.rs  secmap.rs
