[package]
name = "vaultix"
version = "0.3.0"
edition = "2024"
resolver = "2"

[lib]
name = "lib"
path = "src/lib.rs"

[features]
default = ["plugin"]
plugin = ["age/plugin"]

[dependencies]
age = { version = "0.11.2", features = ["ssh"]}
argh = "0.1.13"
blake3 = "1.8.3"
console = "0.16.2"
dashmap = { version = "6.1.0", features = [] }
edit = "0.1.5"
eyre = "0.6.12"
hex = "0.4.3"
hex-literal = "1.1.0"
libc = "0.2.180"
log = "0.4.29"
nom = "8.0.0"
pinentry = "0.8"
rpassword = "7.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
simple_logger = "5.1.0"
strum_macros = "0.27.2"
subtle = "2.6.1"
sys-mount = "3.1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
